# artnet2crap

./: .gitlab-ci.yml  Dockerfile  LICENSE  README.md  pyproject.toml  stupid_test.py
.github/workflows/: publish-docker-image.yml
artnet2crap/: artnet_server.py  crap_client.py  framebuffer.py  pixel_processing.py  server_main.py
