[tool.poetry]
name = "artnet2crap"
version = "0.1.0"
description = "Art-Net to Mate-Light conversion server in AsyncIO/Python"
authors = ["Uwe Kamper <me@uwekamper.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
stupidartnet = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
